[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game/components/CPU.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/components/ProcessList.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/components/SecondaryMemory.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/components/RAM.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/Main.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/misc/KnowBlock2d.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/game/misc/AdicoesFuturas.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="CPU" parent="." groups=["ConnectWithCPU"] instance=ExtResource( 1 )]
position = Vector2( 179, 179 )

[node name="ProcessList" parent="." groups=["ConnectWithCPU"] instance=ExtResource( 2 )]
position = Vector2( 28, 357 )

[node name="RAM" parent="." groups=["ConnectWithCPU"] instance=ExtResource( 4 )]
position = Vector2( 443, 179 )
scale = Vector2( 1, 1 )

[node name="SecondaryMemory" parent="." instance=ExtResource( 3 )]
position = Vector2( 736, 179 )

[node name="ConnectRAMDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ConnectCPUDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="KnowBButtonRAM" type="Button" parent="."]
margin_left = 444.0
margin_top = 40.0
margin_right = 478.0
margin_bottom = 77.0
text = "?"

[node name="KnowBButtonHDD" type="Button" parent="."]
margin_left = 823.0
margin_top = 44.0
margin_right = 857.0
margin_bottom = 81.0
text = "?"

[node name="KnowBButtonCPU" type="Button" parent="."]
margin_left = 203.0
margin_top = 86.0
margin_right = 237.0
margin_bottom = 123.0
text = "?"

[node name="KnowBButonProcessos" type="Button" parent="."]
margin_left = 404.0
margin_top = 357.0
margin_right = 438.0
margin_bottom = 394.0
text = "?"

[node name="KnowBlock" parent="." instance=ExtResource( 6 )]
position = Vector2( -25, 26 )
z_index = -1

[node name="AdicoesFuturas" parent="." instance=ExtResource( 7 )]

[connection signal="ConnectingCPU" from="CPU" to="." method="_on_CPU_ConnectingCPU"]
[connection signal="ConnectProcess" from="ProcessList" to="." method="_on_ProcessList_ConnectProcess"]
[connection signal="ProcessComplete" from="ProcessList" to="." method="_on_ProcessList_ProcessComplete"]
[connection signal="ConnectRAMPort" from="RAM" to="." method="_on_RAM_ConnectRAMPort"]
[connection signal="ConnectingRAM" from="RAM" to="." method="_on_RAM_ConnectingRAM"]
[connection signal="ConnectPort" from="SecondaryMemory" to="." method="_on_SecondaryMemory_ConnectPort"]
[connection signal="timeout" from="ConnectRAMDelay" to="." method="_on_ConnectRAMDelay_timeout"]
[connection signal="timeout" from="ConnectCPUDelay" to="." method="_on_ConnectCPUDelay_timeout"]
[connection signal="pressed" from="KnowBButtonRAM" to="KnowBlock" method="_on_ButtonRAM_pressed"]
[connection signal="pressed" from="KnowBButtonHDD" to="KnowBlock" method="_on_KnowBButtonHDD_pressed"]
[connection signal="pressed" from="KnowBButtonCPU" to="KnowBlock" method="_on_KnowBButtonCPU_pressed"]
[connection signal="pressed" from="KnowBButonProcessos" to="KnowBlock" method="_on_KnowBButonProcessos_pressed"]
[connection signal="pressed" from="AdicoesFuturas" to="KnowBlock" method="_on_AdicoesFuturas_pressed"]
